# key_set.py

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  Pipfile  README.md  justfile  mise.toml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: main.yml
docs/plans/: 2026-01-16-uv-migration-design.md
key_set/: __init__.py  __main__.py  all.py  all_except_some.py  base.py  enum.py  none.py  some.py
my_module/: __init__.py  __main__.py
tests/: test_all.py  test_all_except_some.py  test_builds.py  test_code.py  test_elements.py  test_enum.py  test_none.py  test_some.py  test_utils.py
