# -----------------------------------------------------------------------------
# BUILDING WHEELS
# -----------------------------------------------------------------------------

[metadata]
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files =
    LICENSE.txt
    README.md

[bdist_wheel]
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

# -----------------------------------------------------------------------------
# FORMATTING AND LINTING
# -----------------------------------------------------------------------------

[flake8]
# D100 Missing docstring in public module
# D401 First line should be in imperative mood
# Q003 Change outer quotes to avoid escaping inner quotes
# W503 line break before binary operator (preferred way)
ignore = D100,D401,Q003,W503

# flake8-use-fstring
percent-greedy = 0
format-greedy = 2

# D101 Missing docstring in public class
# D102 Missing docstring in public method
per-file-ignores =
    tests/*: D100,D101,D102

[mypy]
# Untyped definitions and calls
# Disallows defining functions without type annotations or with
# incomplete type annotations.
disallow_untyped_defs = true
# Type-checks the interior of functions without type annotations
check_untyped_defs = true
# Import discovery
follow_imports = normal
ignore_missing_imports = True
# Warning configuration
warn_unused_ignores = true
warn_unreachable = true
# Error message config
# pretty = true

# -----------------------------------------------------------------------------
# TEST CONFIGURATION
# -----------------------------------------------------------------------------

[tool:pytest]
addopts = -p no:warnings
